--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,55 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    background-color: rgb(240, 240, 240);
+}
+
+header {
+    width: auto;
+    height: 50px;
+    background-color: white;
+}
+
+
+
+main {
+    width: 70%;
+    height: 520px;
+    margin: auto;
+    margin-top: 40px;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+nav {
+    height: 50px;
+    border-bottom: 2px solid rgb(240, 240, 240);
+}
+
+.add {
+    line-height: 50px;
+    padding: 5px 10px;
+    font-size: 13px;
+    border-radius: 3px;
+}
+
+#logo {
+    font-size: 35px;
+    font-weight: bold;
+}
+
+#add-task {
+    width: 80px;
+    background-color: rgb(0, 162, 255);
+    margin-left: 50px;
+    color: white;
+}
+
+#add-section {
+    width: 85px;
+    border: 1px solid lightgrey;
+    color:lightgrey;
+}
