--- a/css/style.css
+++ b/css/style.css
@@ -2,33 +2,38 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(246, 246, 247);
 }
 
 header {
     width: auto;
-    height: 50px;
-    background-color: white;
+    height: 60px;
 }
-
-
 
 main {
     width: 70%;
-    height: 520px;
+    height: 510px;
     margin: auto;
     margin-top: 40px;
-    background-color: white;
-    border: 2px solid black;
+    
     border-radius: 5px;
 }
 
 nav {
     height: 50px;
     border-bottom: 2px solid rgb(240, 240, 240);
+}
+
+li {
+    margin-bottom: 20px;
+}
+
+.bg-color {
+    background-color: white;
 }
 
 .add {
@@ -38,9 +43,61 @@ nav {
     border-radius: 3px;
 }
 
+.section {
+    font-weight: bold;
+    color: rgb(53, 52, 52);
+    margin-bottom: 30px;
+    margin-left: 45px;
+    font-size: 18px;
+    list-style: none;
+}
+
+.symbol-section {
+    font-size: 13px;
+}
+
+.topic {
+    color: white;
+    font-weight: normal;
+    font-size: 10px;
+    padding: 6px 11px;
+    border-radius: 10px;
+}
+
+.topic-blue {
+    background-color: rgb(0, 162, 255);
+}
+
+.phrase {
+    margin: 5px 5px;
+    padding: 0;
+    font-size: 15px;
+    color: rgb(75, 71, 71);
+    list-style: none;
+}
+
+.check-mark {
+    border: 1px solid rgb(69, 214, 130);
+    color:  rgb(69, 214, 130);
+}
+
+.cross-mark {
+    border: 1px solid rgb(236, 10, 10);
+    color: rgb(236, 10, 10);
+    font-weight: lighter;
+}
+
+.check {
+    margin-right: 10px;
+    font-size: 10px;
+    padding: 3px 5px;
+    border-radius: 50%;
+}
+
 #logo {
     font-size: 35px;
     font-weight: bold;
+    vertical-align: 30%;
 }
 
 #add-task {
@@ -54,4 +111,28 @@ nav {
     width: 85px;
     border: 1px solid lightgrey;
     color:lightgrey;
+}
+
+#new-task {
+    margin-top: 25px;
+}
+
+#topic-purple {
+    background-color: rgba(137, 43, 226, 0.767)
+}
+
+#topic-green {
+    background-color: rgba(19, 170, 112, 0.856);
+}
+
+#topic-orange {
+    background-color: rgba(231, 158, 21, 0.877);
+}
+
+#topic-pink {
+    background-color: rgb(228, 116, 153);
+}
+
+#topic-yellowgreen {
+    background-color: rgba(145, 202, 32, 0.945);
 }
